# rust_playground

./: .gitignore  README.md
fsview/: .gitignore  Cargo.toml  README.md
fsview/cli/: Cargo.toml  README.md
fsview/cli/src/: cli.rs  main.rs
fsview/cli/src/cli/: file_duplicates.rs  init_database.rs  list_folders.rs  load_database.rs
fsview/fslib/: Cargo.toml  README.md
fsview/fslib/src/: db.rs  domain.rs  filesys.rs  lib.rs
fsview/fslib/src/db/: load.rs  query.rs  schema.rs
fsview/fslib/src/db/query/: folder_content_testcase.yaml
fsview/fslib/src/db/sql/: query_duplicate_folders.sql  query_empty_folders.sql  query_filedups_filename_metadata.sql  query_filedups_ids.sql  query_filedups_metadata.sql  query_folder_content_by_filedups.sql  query_folder_content_by_name.sql  query_folder_content_by_pathname.sql  query_folder_tree_by_name.sql  query_folder_tree_by_pathname.sql  query_problems.sql  query_root_folder_content.sql  query_row_counts.sql  record_duplicate_files.sql  schema_drop.sql  schema_init.sql
fsview/fslib/src/domain/: api.rs  filedups.rs  hierarchy.yaml  objects.rs
fsview/src/: cli.rs  db.rs  domain.rs  filesys.rs  lib.rs
fsview/src/cli/: init_database.rs  list_folders.rs  load_database.rs
fsview/src/db/: load.rs  query.rs  schema.rs
fsview/src/db/query/: query_folder_testcase.yaml  testcases.rs
fsview/src/db/sql/: query_duplicate_folders.sql  query_empty_folders.sql  query_folder_content_by_name.sql  query_folder_content_by_pathname.sql  query_folder_tree_by_name.sql  query_folder_tree_by_pathname.sql  query_problems.sql  query_root_folder_content.sql  query_row_counts.sql  schema_drop.sql  schema_init.sql
fsview/src/domain/: api.rs  builders.rs  objects.rs
py_weather/: Cargo.toml  README.md
py_weather/py_gui/: README.md  pyproject.toml
py_weather/py_gui/py_gui/: app.py  metadata.py
py_weather/py_gui/py_gui/config/colors/: color.py
py_weather/py_gui/py_gui/config/settings/: weather_settings.py
py_weather/py_gui/py_gui/domain/: __init__.py  weather_data.py
py_weather/py_gui/py_gui/tk_weather/: add_history.py  add_location.py  city_search.py  history_dates.py  history_report.py  history_summary.py  locations.py  tk_weather.py
py_weather/py_gui/py_gui/tk_weather/history_graph/: graph_selector.py  graphs.py  history_graph.py
py_weather/py_gui/py_gui/tk_weather/widgets/: date_range_selector.py  locations_view.py
py_weather/py_lib/: Cargo.toml  README.md
py_weather/py_lib/src/: lib.rs  py_entities.rs  py_history_client.rs  py_weather_data.rs
toolslib/: .gitignore  Cargo.toml
toolslib/src/: date_time.rs  fmt.rs  lib.rs  logs.rs  stopwatch.rs  text.rs
trace/: .gitignore  Cargo.toml  README.md
trace/src/: lib.rs
trace/tests/: trace_macro.rs
weather/: .gitignore  Cargo.toml  README.md
weather/admin/: Cargo.toml  README.md
weather/admin/src/: admin.rs
weather/cli/: Cargo.toml  README.md
weather/cli/src/: cli.rs  main.rs
weather/cli/src/cli/: admin.rs  list_history.rs  list_locations.rs  list_summary.rs  report_history.rs  reports.rs  tui.rs  user.rs
weather/cli/src/cli/admin/: drop.rs  init.rs  migrate.rs  reload.rs  show.rs  us_cities.rs
weather/cli/src/cli/reports/: list_history.rs  list_locations.rs  list_summary.rs  report_history.rs
weather/cli/src/cli/tui/: app.rs  dialogs.rs  histories_win.rs  locations_win.rs  summary_win.rs
weather/cli/src/cli/tui/dialogs/: add_location.rs  location_search.rs
weather/cli/src/cli/tui/locations_win/: add_history.rs  context_menu.rs  report.rs
weather/cli/src/cli/user/: add_history.rs  list_history.rs  list_locations.rs  list_summary.rs  query_cities.rs  report_history.rs
weather/lib/: Cargo.toml  README.md
weather/lib/src/: admin.rs  backend.rs  data.rs  domain.rs  entities.rs  history_client.rs  lib.rs  weather_data.rs
weather/lib/src/backend/: config.rs  data.rs  db.rs  filesys.rs  history.rs
weather/lib/src/backend/db/: admin.rs  archive.rs  document_db.rs  drop.sql  history.rs  hybrid_db.rs  locations.rs  metadata.rs  normalized_db.rs  query.rs  schema.sql  sqlite.rs  us_cities.rs
weather/lib/src/backend/db/sqlite/: admin.rs  history.rs  locations.rs  metadata.rs  us_cities.rs
weather/lib/src/backend/db/sqlite/history/: query.rs
weather/lib/src/backend/filesys/: admin.rs  archives.rs  files.rs  history.rs  locations.rs
weather/lib/src/data/: files.rs  objects.rs
weather/lib/src/domain/: objects.rs
weather/lib/src/history_client/: rest_client.rs  timeline_client.rs
weather/src/: cli.rs  data.rs  domain.rs  lib.rs  main.rs
weather/src/cli/: list_history.rs  list_locations.rs  list_summary.rs  mod.rs  report_history.rs  text_reports.rs
weather/src/data/: files.rs  fs.rs  mod.rs  objects.rs
weather/src/domain/: beans.rs  mod.rs  objects.rs
weather/termui/: Cargo.toml  README.md
weather/termui/src/controls/: report_view.rs  text.rs
weather/termui/src/controls/text/: date_editor.rs  text_editor.rs
