[package]
name = "fsview"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fsview"
path = "src/main.rs"

[lib]
name = "fsviewlib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toolslib = { path = "../toolslib" }
clap = { version = "3.2.17", features = ["derive"] }
chrono = "0.4.22"
log = "0.4"
log4rs = "1.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thousands = "0.2"
