[workspace]
resolver = "2"

members = [
    "admin",
    "cli",
    "lib",
]

[workspace.dependencies]
chrono = "0.4"
chrono-tz = { version = "0.8", features = ["serde"] }
log = "0.4"
rusqlite = { version = "0.29", features = ["blob", "bundled", "chrono"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
toolslib = { path = "../toolslib" }
