[workspace]
resolver = "2"

members = [
    "admin",
    "cli",
    "lib",
]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.8", features = ["serde"] }
log = "0.4"
rusqlite = { version = "0.29", features = ["blob", "bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.7", features = ["preserve_order"] }
toolslib = { path = "../toolslib" }
