[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "admin"
path = "src/admin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
# clap = { version = "3.1.18", features = ["derive"] }
clap = "4.1"
log.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toolslib.workspace = true
weather_lib = { path = "../lib" }
