[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weather"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
clap = { version = "3.1.18", features = ["derive"] }
csv = "1.1"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toolslib.workspace = true
weather_lib = { path = "../lib" }
