[package]
name = "weather"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "weather"
path = "src/main.rs"

[features]
log_key_event = []
log_render = []

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.1"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toolslib.workspace = true
weather_lib = { path = "../lib" }
termui_lib = { path = "../termui"}
#termui_lib = { path = "../termui" }
#termui_lib = { path = "../termui", features = ["log_render"] }
#termui_lib = { path = "../termui", features = ["log_key_event"] }
#termui_lib = { path = "../termui", features = ["log_render", "log_key_event"] }
crossterm.workspace = true
ratatui.workspace = true
trace.workspace = true
