[package]
name = "weather_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "weather_lib"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
log.workspace = true
reqwest = {version = "0.11", features = ["blocking"]}
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
snap = "1"
toml.workspace = true
toolslib.workspace = true
zip = "0.6"

[dev-dependencies]
pretty_assertions = "1"
filetime = "0.2"
rand = "0.8"
